Fixing profiling issue because jfluid classes are missing from WildFly.